--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         image: webdevops/php-apache:7.3
         container_name: ${PROJECT_NAME}_webserver
         volumes: 
-            - ./htdocs/${PROJECT_NAME}:/var/www/vhosts/${PROJECT_NAME}/htdocs
+            - ./htdocs:/var/www/vhosts/${PROJECT_NAME}/htdocs
             - ./etc/apache2/sites-enabled:/etc/apache2/sites-enabled
             - ./logs:/var/log/apache2
         depends_on: 
