--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,7 @@ services:
             - 80
         ports: 
             - 80:80 
+networks: 
+    default: 
+        external: 
+            name: dev-network
