Update vhost configuration

--- a/etc/apache2/sites-enabled/site.conf
+++ b/etc/apache2/sites-enabled/site.conf
@@ -10,7 +10,7 @@
         AllowOverride none
         Order Allow,Deny
         Allow from All
-	FallbackResource /index.php
+	FallbackResource /public/index.php
     </Directory>
     ErrorLog /var/log/apache2/init.log
     CustomLog /var/log/apache2/init.log combined
